--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="img/p4.png" class="mypic">
+        <img src="https://img.freepik.com/free-vector/cute-student-cartoon-character_1308-133976.jpg" class="mypic">
         <div class="info">
-            <h3>Hi! I'm Jane,</h3>
+            <h3>Hi! I'm Pranavi,</h3>
             <h2>I'm a Web Developer.</h2>
             <h4>From Texas.</h4>
             <p>Completed my online Web Development course by CodeWizard and I suggest you try to relax and learn something new. &#x1F609; </p>
