--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="info">
             <h3>Hi! I'm Pranavi,</h3>
             <h2>I'm a Web Developer.</h2>
-            <h4>From Texas.</h4>
-            <p>Completed my online Web Development course by CodeWizard and I suggest you try to relax and learn something new. &#x1F609; </p>
-            <h4>Hobbies:</h4>
+            <h4>I am from Texas.</h4>
+            <p>Completed my online Web Development course by CodeWizards and I suggest you try to relax and learn something new. &#x1F609; </p>
+            <h4>My Hobbies are:</h4>
             <div class="hobbies">Photography <img src="img/photography.png" class="icon"> </div>
             <div class="hobbies"> Cooking <img src="img/cooking.png" class="icon"></div> 
             <div class="hobbies"> Painting <img src="img/painting.png" class="icon"></div>
